--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,25 @@ h1{
     margin-left: center;
     margin-right: center;
 }
+h3{
+    font-weight: 100;
+}
+.landmarks{
+    display: flex;
+    flex-direction: row;
+}
+#description{
+    width: 400px;
+    padding-right: 100px;
+}
+.stories{
+    display: flex;
+    flex-direction: row;
+    border: 5px;
+    border-color: black;
+    padding-bottom: 100px;
+}
+#color{
+    background-color: darkolivegreen;
+
+}
