--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,19 @@ h3{
     padding-right: 100px;
 }
 .stories{
-    display: flex;
-    flex-direction: row;
     border: 5px;
     border-color: black;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
 }
 #color{
     background-color: darkolivegreen;
+    display: flex;
+    flex-direction: row;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 
+a{
+    text-decoration: none;
+    color: black;
 }
