--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+
+body {
+    font-family:   Cardo,Arial, Helvetica, sans-serif, sans-serif;
+}
 h1{
     color: red
 }
@@ -10,10 +14,7 @@ h1{
 h3{
     font-weight: 100;
 }
-.landmarks{
-    display: flex;
-    flex-direction: row;
-}
+
 #description{
     width: 400px;
     padding-right: 100px;
@@ -29,6 +30,10 @@ h3{
     flex-direction: row;
     padding-top: 20px;
     padding-bottom: 20px;
+    width:400px;
+    height:200px;
+    border:solid;
+    border-radius: 20px;
 }
 
 a{
