--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,17 @@ a{
     text-decoration: none;
     color: black;
 }
+.header{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-end;
+}
+
+.mapPage{
+    text-decoration: underline;
+}
+.StorySubmission{
+    padding-left: 20px;
+    
+}
