--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ a{
 .header{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-end;
     margin-left: 20px;
 }
@@ -110,4 +110,76 @@ a{
     margin-right: auto;
     text-decoration: underline;
     text-align: center;
+}
+@media only screen and (min-width: 400px) and (max-width: 1200px) {
+    /* Styles for screens between 400px and 1200px */
+    h1 {
+        font-size: 75px;
+       ;
+    }
+    body {
+        font-family:   Arial, Helvetica, sans-serif, sans-serif;
+        width: 1200px;
+        margin: 50px;
+        padding-right:50;
+    }
+    .mapC{
+        width: 800px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #map{
+        height: 700px;
+        width:800px;
+        margin-left: center;
+        margin-right: center;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    /* Styles for screens smaller than 401px */
+    h1 {
+        font-size: 30px;
+        text-align: start;
+        
+       ;
+    }
+    body {
+        font-family:   Arial, Helvetica, sans-serif, sans-serif;
+        width: 390px;
+        margin: 50px;
+        padding-right:50;
+    }
+    .mapC{
+        width: 390px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #map{
+        height: 700px;
+        width:340px;
+        margin-left: center;
+        margin-right: center;
+    }
+    h2{
+        font-size: 15px;
+    }
+    .stories{
+        width:350px;
+    }
+    .Scard{
+        width: 350px;
+    }
+    .Sdescription{
+        font-size: 12px;
+    }
+    .imagSP{
+        width: 350px;
+    }
+    .formatSP{
+        width: 350px;
+        text-align: start;
+    }
 }
