--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,42 @@
-
+/*sets body width and font*/
 body {
     font-family:   Arial, Helvetica, sans-serif, sans-serif;
     width: 1200px;
     margin: 50px;
-    padding-right:50;
+    
 }
-
+/*sets color, size and placement of h1*/
 h1{
     color:darkolivegreen;
     text-align: center;
     font-size: 75px;
 }
+/*sets dimensions for map*/
 #map{
     height: 700px;
     width:800px;
-    margin-left: center;
-    margin-right: center;
+    margin-left: auto;
+    margin-right: auto;
 }
+/*sets font weight for h3*/
 h3{
     font-weight: 100;
 }
-
+/*sets description style for Storycard*/
 .Sdescription{
     width: 400px;
     padding-right: 20px;
     padding-left: 20px;
     color:white;
 }
+/*sets image style for Storycard*/
 .Simages{
     width: 200px;
     height: 200px;
     padding-right: 20px;
    
 }
+/*sets border for Storycard*/
 .stories{
     border: 5px;
     border-color: black;
@@ -40,6 +44,7 @@ h3{
     width: 550px;
     padding-right: 50px;
 }
+/*sets background for Storycard*/
 .Scard{
     background-color: darkolivegreen;
     display: flex;
@@ -53,15 +58,17 @@ h3{
     justify-content: center;
    
 }
+/*make bacground red when hover over Storycard*/
 .Scard:hover{
     background:#800020;
     border: 10px;
 }
-
+/*sets link style */
 a{
     text-decoration: none;
     color: black;
 }
+/*sets header style for each page*/
 .header{
     display: flex;
     flex-direction: row;
@@ -69,41 +76,47 @@ a{
     justify-content: flex-end;
     margin-left: 20px;
 }
-
+/*underlines map in Nav Bar when it is on the Map page*/
 .mapPage{
     text-decoration: underline;
 }
+/*sets  style for Story Submit button*/
 .StorySubmission{
     padding-left: 20px;
     padding-right: 50px;
     
 }
-
+/*sets description style for story text*/
 .dText{
     padding-right: 50px;
     text-align: left;
 }
+/*creates flexbox for template stories to be copied too*/
 .StoryL {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
+/*sets description style for all titles*/
 .title{
     text-align: center;
     font-size: 75px;
 }
+/*sets style for map*/
 .mapC{
     width: 800px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
+/*sets image style for Story Page*/
 .imagSP{
     width: 600px;
     margin-left: auto;
     margin-right: auto;
     
 }
+/*sets format style for Story Page*/
 .formatSP{
     width: 1200px;
     margin-left: auto;
@@ -111,8 +124,9 @@ a{
     text-decoration: underline;
     text-align: center;
 }
+/*Media Quary used to indicate changes to desgn when between 401-1200px*/
+
 @media only screen and (min-width: 400px) and (max-width: 1200px) {
-    /* Styles for screens between 400px and 1200px */
     h1 {
         font-size: 75px;
        ;
@@ -121,7 +135,7 @@ a{
         font-family:   Arial, Helvetica, sans-serif, sans-serif;
         width: 1200px;
         margin: 50px;
-        padding-right:50;
+        
     }
     .mapC{
         width: 800px;
@@ -132,13 +146,13 @@ a{
     #map{
         height: 700px;
         width:800px;
-        margin-left: center;
-        margin-right: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
+/*Media Quary used to indicate changes to desgn when below 401px*/
 
 @media only screen and (max-width: 400px) {
-    /* Styles for screens smaller than 401px */
     h1 {
         font-size: 30px;
         text-align: start;
@@ -149,7 +163,7 @@ a{
         font-family:   Arial, Helvetica, sans-serif, sans-serif;
         width: 390px;
         margin: 50px;
-        padding-right:50;
+        
     }
     .mapC{
         width: 390px;
@@ -160,8 +174,8 @@ a{
     #map{
         height: 700px;
         width:340px;
-        margin-left: center;
-        margin-right: center;
+        margin-left: auto;
+        margin-right: auto;
     }
     h2{
         font-size: 15px;
